RESOLVED FIXED79020
[BlackBerry] Checkerboard never goes away in tiled accelerated compositing layer
https://bugs.webkit.org/show_bug.cgi?id=79020
Summary [BlackBerry] Checkerboard never goes away in tiled accelerated compositing layer
Arvid Nilsson
Reported 2012-02-20 02:08:48 PST
Upstream webkit/c2249235855dfcc371b1088bb8257c80a74f6684 to bring our file in sync with upstream, which is missing this patch.
Attachments
Patch (9.49 KB, patch)
2012-03-02 11:07 PST, Jakob Petsovits
no flags
Jakob Petsovits
Comment 1 2012-03-02 11:07:14 PST
Jakob Petsovits
Comment 2 2012-03-02 11:12:42 PST
The above is the patch that Arvid was talking about. It originally included a few hunks in WebPage.cpp too, but those were already upstreamed as part of the original WebPage.cpp upstreaming, so without this patch the WebKit/blackberry code is actually out of sync. The patch has already been reviewed by Adam Treat internally, so I'm not putting it up for review again as he's an upstream reviewer too. Letting him set the commit-queue flag though.
WebKit Review Bot
Comment 3 2012-03-02 13:05:10 PST
Comment on attachment 129924 [details] Patch Rejecting attachment 129924 [details] from commit-queue. New failing tests: editing/selection/select-line-break-with-opposite-directionality.html Full output: http://queues.webkit.org/results/11802098
Jakob Petsovits
Comment 4 2012-03-02 13:19:14 PST
Comment on attachment 129924 [details] Patch What? That's clearly unrelated. Let's hope it was something temporary and whatever tests were broken have been fixed in the meantime. Setting back to cq?.
WebKit Review Bot
Comment 5 2012-03-02 17:22:37 PST
Comment on attachment 129924 [details] Patch Clearing flags on attachment: 129924 Committed r109638: <http://trac.webkit.org/changeset/109638>
WebKit Review Bot
Comment 6 2012-03-02 17:22:42 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.