Source/WebKit/blackberry/Api/BackingStore_p.h
@@ -196,6 +196,9 @@ public:
     void blendCompositingSurface(const Platform::IntRect& dstRect);
     void clearCompositingSurface();
     bool drawSubLayers();
+    bool drawLayersOnCommitIfNeeded();
+    // WebPage will call this when drawing layers to tell us we don't need to
+    void willDrawLayersOnCommit() { m_needsDrawLayersOnCommit = false; }
 #endif
 
     void blitHorizontalScrollbar(const Platform::IntPoint&);
@@ -347,6 +350,10 @@ public:
     pthread_mutex_t m_blitGenerationLock;
     pthread_cond_t m_blitGenerationCond;
     struct timespec m_currentBlitEnd;
+
+#if USE(ACCELERATED_COMPOSITING)
+    mutable bool m_needsDrawLayersOnCommit; // Not thread safe, WebKit thread only
+#endif
 };
 } // namespace WebKit
 } // namespace BlackBerry
